--- a/dev/index.html
+++ b/dev/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk" dir="ltr">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
@@ -9,11 +9,11 @@
   <meta name="theme-color" content="#fff">
   <meta name="msapplication-navbutton-color" content="#fff">
   <meta name="apple-mobile-web-app-status-bar-style" content="#fff">
-  <title>Index | frontend-starterkit</title>
+  <title>MasterShot | MasterShot</title>
   <meta name="keywords" content="">
   <meta name="description" content="">
-  <meta name="apple-mobile-web-app-title" content="KRI Starterkit">
-  <meta name="application-name" content="KRI Starterkit">
+  <meta name="apple-mobile-web-app-title" content="">
+  <meta name="application-name" content="">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-config" content="browserconfig.xml">
   <meta name="theme-color" content="#ffffff">
@@ -23,6 +23,7 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#000000">
   <link rel="shortcut icon" href="favicon.ico">
+
   <link rel="stylesheet" href="css/app.css">
 </head>
 
@@ -34,7 +35,7 @@
           <div class="header__logo">
             <div class="logo">
               <a href="#" class="logo__link">
-                <img src="images/logo.svg" alt="frontend-starterkit">
+                <img src="images/logo.svg" alt="MasterShot">
               </a>
             </div>
           </div>
