--- a/dev/index.html
+++ b/dev/index.html
@@ -40,11 +40,6 @@
             </div>
           </div>
           <div class="header__items">
-            <ul>
-              <li><a href="">Pricing & Plans</a></li>
-              <li><a href="">Tutorials</a></li>
-              <li><a href="">Blog</a></li>
-            </ul>
             <div class="header__item">
               <a href="https://app.mastershot.io/auth/login">Log In</a>
               <button class="header__button"><a href="#price">Get started for free</a></button>
@@ -168,7 +163,7 @@
                       <li><img src="images/icon/blue/4.svg" alt=""> Custom branding</li>
                     </ul>
                   </div>
-                  <button class="price__button_blue"><a href="https://app.mastershot.io/auth/login">Buy</a></button>
+                  <button class="price__button_blue"><a href="https://app.mastershot.io/auth/login">Try free</a></button>
                 </div>
                 <div class="price__cards_card">
                   <h2>Indie</h2>
@@ -182,7 +177,7 @@
                       <li><img src="images/icon/inactive/4.svg" alt=""> Custom branding</li>
                     </ul>
                   </div>
-                  <button class="price__button_standart"><a href="https://app.mastershot.io/auth/login">Buy</a></button>
+                  <button class="price__button_standart"><a href="https://app.mastershot.io/auth/login">Try free</a></button>
                 </div>
               </div>
             </div>
